Add workaround for illegal access warnings on Java 9